# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: main.yml
task_manager/: __init__.py  mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_label.py  0003_delete_labelmodel.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_status.py  0003_delete_statusmodel.py
task_manager/tasks/: admin.py  filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_taskmodel_labels.py  0004_task_remove_taskmodel_author_and_more.py  0005_task_author_task_executor_task_labels_task_status_and_more.py
task_manager/templates/: base.html  footer.html  header.html  index.html  layout.html  login.html  messages.html
task_manager/templates/components/: header.html  messages.html  nav.html
task_manager/templates/labels/: create.html  delete.html  labels.html  update.html
task_manager/templates/statuses/: create.html  delete.html  statuses.html  statuses_list.html  (+1 more)
task_manager/tests/: test_labels_app.py  test_statuses_app.py  test_tasks_app.py  test_users_app.py
task_manager/users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+21 files in other folders)
