[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["artur sharipov <sharipoffartur@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]
repository = "https://github.com/ArturSharipov11/python-project-52"

[tool.poetry.dependencies]
python = "3.12.0"
django-bootstrap5 = "^24.2"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
django = "^5.0.4"
whitenoise = "^6.6.0"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
